infra/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /kbn
            backend:
              service:
                name: kbn-service
                port:
                  number: 8081
          - pathType: Prefix
            path: /auth/swagger-ui
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
